[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-longprobe"
version = "0.1.1"
description = "LangChain integration for LongProbe — sub-second RAG retrieval regression testing with chunk-level diffing"
readme = "README.md"
license = { text = "MIT" }
authors = [
    {name = "EnDevSols", email = "opensource@endevsols.com"},
]
maintainers = [
    {name = "EnDevSols", email = "opensource@endevsols.com"},
]
keywords = [
    "langchain",
    "rag",
    "retrieval",
    "testing",
    "regression",
    "evaluation",
    "llm",
    "vector-store",
    "longprobe",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
]
requires-python = ">=3.10"
dependencies = [
    "longprobe>=0.1.1",
    "langchain-core>=0.2.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.2.0"]
langsmith = ["langsmith>=0.1.0"]
all = [
    "langchain-longprobe[langchain]",
    "langchain-longprobe[langsmith]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "langchain>=0.2.0",
]

[project.urls]
Homepage = "https://endevsols.com/open-source/longprobe"
Documentation = "https://github.com/ENDEVSOLS/langchain-longprobe#readme"
Repository = "https://github.com/ENDEVSOLS/langchain-longprobe"
Issues = "https://github.com/ENDEVSOLS/langchain-longprobe/issues"
"LongProbe Core" = "https://github.com/ENDEVSOLS/LongProbe"
"Source Code" = "https://github.com/ENDEVSOLS/langchain-longprobe"

[project.entry-points."pytest11"]
langchain_longprobe = "langchain_longprobe.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["libs/langchain_longprobe"]

[tool.hatch.build.targets.sdist]
include = ["libs/langchain_longprobe", "tests", "README.md", "LICENSE"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["libs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",
    "B008",
    "B904",
    "RUF012",
    "SIM108",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint.isort]
known-first-party = ["langchain_longprobe"]
